--- a/oneCircuitLBMEncodingCost.ipynb
+++ b/oneCircuitLBMEncodingCost.ipynb
@@ -556,7 +556,27 @@
       "4 counts: OrderedDict({'rz': 121092, 'sx': 74836, 'ecr': 28844, 'x': 3150})\n",
       "4 time: 16392.48\n",
       "\n",
-      "Iteration 1\n"
+      "Iteration 1\n",
+      "4 depth: 92416\n",
+      "4 counts: OrderedDict({'rz': 94838, 'sx': 51553, 'ecr': 28038, 'x': 9734})\n",
+      "4 time: 15777.120000000003\n",
+      "\n",
+      "Iteration 2\n",
+      "4 depth: 105318\n",
+      "4 counts: OrderedDict({'rz': 118756, 'sx': 81975, 'ecr': 28710, 'x': 1922})\n",
+      "4 time: 16465.68\n",
+      "\n",
+      "Iteration 3\n",
+      "4 depth: 91859\n",
+      "4 counts: OrderedDict({'rz': 93557, 'sx': 49126, 'ecr': 27735, 'x': 10211})\n",
+      "4 time: 15895.620000000003\n",
+      "\n",
+      "Iteration 4\n",
+      "4 depth: 107891\n",
+      "4 counts: OrderedDict({'rz': 113190, 'sx': 65486, 'ecr': 28725, 'x': 5857})\n",
+      "4 time: 16308.539999999999\n",
+      "\n",
+      "Iteration 0\n"
      ]
     }
    ],
