--- a/parallelization_analysis/data/analysis.ipynb
+++ b/parallelization_analysis/data/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,6 +36,60 @@
     "\n",
     "with open(\"../../data/oneCircuitResourceEstimation.pkl\", \"rb\") as f:\n",
     "    one_data = pkl.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: {'depth': 70992,\n",
+       "  'count_ops': OrderedDict([('rz', 63820),\n",
+       "               ('sx', 40084),\n",
+       "               ('ecr', 19340),\n",
+       "               ('x', 2514),\n",
+       "               ('barrier', 6)]),\n",
+       "  'runtime': 11922.06},\n",
+       " 2: {'depth': 105304,\n",
+       "  'count_ops': OrderedDict([('rz', 101015),\n",
+       "               ('sx', 63731),\n",
+       "               ('ecr', 31583),\n",
+       "               ('x', 3715),\n",
+       "               ('barrier', 6)]),\n",
+       "  'runtime': 18003.72},\n",
+       " 3: {'depth': 474197,\n",
+       "  'count_ops': OrderedDict([('rz', 459468),\n",
+       "               ('sx', 289015),\n",
+       "               ('ecr', 141189),\n",
+       "               ('x', 16384),\n",
+       "               ('barrier', 6)]),\n",
+       "  'runtime': 77876.94},\n",
+       " 4: {'depth': 1268120,\n",
+       "  'count_ops': OrderedDict([('rz', 1354893),\n",
+       "               ('sx', 859234),\n",
+       "               ('ecr', 424214),\n",
+       "               ('x', 47917),\n",
+       "               ('barrier', 6)]),\n",
+       "  'runtime': 221209.08},\n",
+       " 5: {'depth': 3883490,\n",
+       "  'count_ops': OrderedDict([('rz', 4061236),\n",
+       "               ('sx', 2585836),\n",
+       "               ('ecr', 1251404),\n",
+       "               ('x', 133512),\n",
+       "               ('barrier', 6)]),\n",
+       "  'runtime': 673897.56}}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "one_data"
    ]
   },
   {
