data for statevector error

--- a/advectionDiffusion/QuantumD1Q3Visualizations.ipynb
+++ b/advectionDiffusion/QuantumD1Q3Visualizations.ipynb
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "f4d34f01",
    "metadata": {
     "scrolled": false
@@ -592,6 +592,7 @@
     "        plt.plot(list(range(0,M,1)), nrm*np.array(SV)[:M]/np.linalg.norm(np.array(SV)[:M]), label='Statevector Simulation')\n",
     "        X['sv'] = list(range(0,M,1))\n",
     "        Y['sv'] = nrm*np.array(SV)[:M]/np.linalg.norm(np.array(SV)[:M])\n",
+    "        # np.real(nrm* np.array(SV)[:M]/np.linalg.norm(np.array(SV)[:M]))\n",
     "        \n",
     "        plt.xlabel(\"Lattice site\")\n",
     "        plt.ylabel(\"Concentration\")\n",
@@ -10935,6 +10936,35 @@
     "    with open(f\"data/finite_sampling_data/{j}.csv\", \"w\", newline='') as f:\n",
     "        writer = csv.writer(f, delimiter=',')\n",
     "        writer.writerows(csv_dat)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "0c3074c1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['x', 'y'], [0, 0.10069911167379254], [1, 0.10069911353954909], [2, 0.10069912101339965], [3, 0.10069914896083985], [4, 0.10069924645944424], [5, 0.10069956359481669], [6, 0.10070052474854713], [7, 0.10070323702897127], [8, 0.10071035798603102], [9, 0.10072773774917915], [10, 0.10076713375990963], [11, 0.10084998721315357], [12, 0.10101145544456297], [13, 0.10130261549191832], [14, 0.10178747335507446], [15, 0.10253121537283195], [16, 0.10357830876479727], [17, 0.1049240416687444], [18, 0.10648933269484122], [19, 0.10811245467971066], [20, 0.10956870153152312], [21, 0.11061879834631573], [22, 0.1110728439135858], [23, 0.11084643651775856], [24, 0.10998619658661454], [25, 0.10865413936458228], [26, 0.1070780597508528], [27, 0.10548867907257403], [28, 0.10406700969457189], [29, 0.10291725837380858], [30, 0.10206752803762233], [31, 0.10148986799675314], [32, 0.10112710022666606], [33, 0.10091604249396043], [34, 0.10080205715743011], [35, 0.10074483594002298], [36, 0.100718111543749], [37, 0.10070649372777493], [38, 0.10070179155990618], [39, 0.10070001979805428], [40, 0.10069939847411315], [41, 0.10069919579504806], [42, 0.10069913434074648], [43, 0.10069911703768165], [44, 0.10069911251921108], [45, 0.1006991114264732], [46, 0.10069911118216812], [47, 0.10069911113177822], [48, 0.1006991111222138], [49, 0.10069911112054783], [50, 0.10069911112028228], [51, 0.10069911112024409], [52, 0.10069911112023905], [53, 0.100699111120239], [54, 0.10069911112023947], [55, 0.10069911112024006], [56, 0.1006991111202398], [57, 0.1006991111202427], [58, 0.10069911112026052], [59, 0.10069911112036954], [60, 0.10069911112102474], [61, 0.10069911112470148], [62, 0.1006991111440042], [63, 0.10069911123877934]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = X[\"sv\"]\n",
+    "y = Y[\"sv\"]\n",
+    "\n",
+    "csv_dat = [[\"x\",\"y\"]]\n",
+    "\n",
+    "for i in range(len(x)):\n",
+    "    csv_dat.append([x[i], np.real(y[i]).item()])\n",
+    "\n",
+    "print(csv_dat)\n",
+    "with open(f\"data/finite_sampling_data/sv.csv\", \"w\", newline='') as f:\n",
+    "    writer = csv.writer(f, delimiter=',')\n",
+    "    writer.writerows(csv_dat)"
    ]
   }
  ],
