convert resource estimation data to CSV files

--- a/parallelization_analysis/data/analysis.ipynb
+++ b/parallelization_analysis/data/analysis.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np \n",
     "from collections import OrderedDict\n",
     "import matplotlib.pyplot as plt\n",
-    "import pickle as pkl"
+    "import pickle as pkl\n",
+    "import csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +24,70 @@
     "\n",
     "with open(\"twoCircuitResourceEstimation.pkl\", \"rb\") as f:\n",
     "    two_data = pkl.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write two circuit resource estimation to csv files\n",
+    "y = list(two_data.keys())\n",
+    "\n",
+    "# get runtimes\n",
+    "vorticity_runtimes = []\n",
+    "streamfunction_runtimes = []\n",
+    "runtimes = []\n",
+    "\n",
+    "# get ecr counts\n",
+    "vorticity_ecr = []\n",
+    "streamfunction_ecr = []\n",
+    "ecr = []\n",
+    "\n",
+    "runtime_fields = [\"sites\", \"runtime\"]\n",
+    "ecr_fields = [\"sites\", \"gates\"]\n",
+    "\n",
+    "for i in y:\n",
+    "    d = two_data[i]\n",
+    "    vorticity_runtimes.append({\"sites\":i, \"runtime\":d[\"vorticity\"][\"runtime\"]})\n",
+    "    streamfunction_runtimes.append({\"sites\":i, \"runtime\":d[\"streamfunction\"][\"runtime\"]})\n",
+    "    runtimes.append({\"sites\":i, \"runtime\":max(d[\"streamfunction\"][\"runtime\"], d[\"vorticity\"][\"runtime\"])})\n",
+    "\n",
+    "    vorticity_ecr.append({\"sites\":i, \"gates\":d[\"vorticity\"][\"count_ops\"]['ecr']})\n",
+    "    streamfunction_ecr.append({\"sites\":i, \"gates\":d[\"streamfunction\"][\"count_ops\"]['ecr']})\n",
+    "    ecr.append({\"sites\":i, \"gates\":d[\"streamfunction\"][\"count_ops\"]['ecr'] + d[\"vorticity\"][\"count_ops\"]['ecr']})\n",
+    "\n",
+    "# save as csv files\n",
+    "with open(\"resource_estimation_data/vorticity_runtimes.csv\", \"w\") as f:\n",
+    "    writer = csv.DictWriter(f, fieldnames = runtime_fields) \n",
+    "    writer.writeheader() \n",
+    "    writer.writerows(vorticity_runtimes) \n",
+    "\n",
+    "with open(\"resource_estimation_data/streamfunction_runtimes.csv\", \"w\") as f:\n",
+    "    writer = csv.DictWriter(f, fieldnames = runtime_fields) \n",
+    "    writer.writeheader() \n",
+    "    writer.writerows(streamfunction_runtimes) \n",
+    "\n",
+    "with open(\"resource_estimation_data/runtimes.csv\", \"w\") as f:\n",
+    "    writer = csv.DictWriter(f, fieldnames = runtime_fields) \n",
+    "    writer.writeheader() \n",
+    "    writer.writerows(runtimes) \n",
+    "\n",
+    "with open(\"resource_estimation_data/vorticity_ecr.csv\", \"w\") as f:\n",
+    "    writer = csv.DictWriter(f, fieldnames = ecr_fields) \n",
+    "    writer.writeheader() \n",
+    "    writer.writerows(vorticity_ecr) \n",
+    "\n",
+    "with open(\"resource_estimation_data/streamfunction_ecr.csv\", \"w\") as f:\n",
+    "    writer = csv.DictWriter(f, fieldnames = ecr_fields) \n",
+    "    writer.writeheader() \n",
+    "    writer.writerows(streamfunction_ecr) \n",
+    "\n",
+    "with open(\"resource_estimation_data/ecr.csv\", \"w\") as f:\n",
+    "    writer = csv.DictWriter(f, fieldnames = ecr_fields) \n",
+    "    writer.writeheader() \n",
+    "    writer.writerows(ecr) "
    ]
   },
   {
