csv file for one circuit resource estimation

--- a/data/encodingCost/analysis.ipynb
+++ b/data/encodingCost/analysis.ipynb
@@ -110,6 +110,88 @@
    "source": [
     "data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle as pkl\n",
+    "import csv\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"../oneCircuitResourceEstimation.pkl\", \"rb\") as f:\n",
+    "    data = pkl.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'depth': 70992,\n",
+       " 'count_ops': OrderedDict([('rz', 63820),\n",
+       "              ('sx', 40084),\n",
+       "              ('ecr', 19340),\n",
+       "              ('x', 2514),\n",
+       "              ('barrier', 6)]),\n",
+       " 'runtime': 11922.06}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "runtime_fields = [\"sites\", \"runtime\"]\n",
+    "ecr_fields = [\"sites\", \"gates\"]\n",
+    "\n",
+    "runtimes = []\n",
+    "ecr = []\n",
+    "\n",
+    "for i in list(data.keys()):\n",
+    "    d = data[i]\n",
+    "    runtimes.append({\n",
+    "        \"sites\":i,\n",
+    "        \"runtime\":d[\"runtime\"]\n",
+    "    })\n",
+    "\n",
+    "    ecr.append({\n",
+    "        \"sites\":i,\n",
+    "        \"gates\":d[\"count_ops\"][\"ecr\"]\n",
+    "    })\n",
+    "\n",
+    "with open(\"qlbmRuntime.csv\", \"w\") as f:\n",
+    "    writer = csv.DictWriter(f, fieldnames = runtime_fields) \n",
+    "    writer.writeheader()\n",
+    "    writer.writerows(runtimes) \n",
+    "\n",
+    "with open(\"qlbmEcr.csv\", \"w\") as f:\n",
+    "    writer = csv.DictWriter(f, fieldnames = ecr_fields) \n",
+    "    writer.writeheader() \n",
+    "    writer.writerows(ecr) \n"
+   ]
   }
  ],
  "metadata": {
